# NeuFormer

./: .gitignore  ABSTRACT.md  BUILD_LM_DECODER.md  DCOND_COMPLETE_IMPLEMENTATION.md  DCOND_STEP2_COMPLETE.md  DCOND_STEP3_COMPLETE.md  PRE_TRAINING_CHECKLIST.md  READY_TO_TRAIN.md  TRAINING_CONFIG.md  VERIFICATION_COMPLETE.md  architecture_diagram.md  pyproject.toml  setup.cfg  setup_lm.sh  test_full_integration.py  test_joint_loss.py  test_multiscale_ctc.py  test_training_integration.py  verify_marginalization_running.py
language_model/runtime/server/x86/: CMakeLists.txt  setup.py
lm_dir/: lexicon.txt
scripts/: eval_gpt2_lm.py  eval_per.py  eval_posterior_constrained.py  setup_lm_dir.py  sweep_lm_params.py  train_conformer.py  train_conformer_v2.py  train_conformer_v3.py  train_conformer_v4.py  train_conformer_v4a.py  train_diphone.py  train_diphone_final.py  train_model.py  tune_rescorer.py
src/neural_decoder/: constrained_decode.py  ctc_beam_decoder.py  dataset.py  decode_pipeline.py  diphone_utils.py  distillation.py  evaluation.py  lexicon.py  llm_rescorer.py  llm_scorer.py  nbest_augmentation.py  neural_decoder_trainer.py  ngram_decoder.py  ngram_lm.py  phoneme_table.py  transformer_ctc.py  uncertainty.py
tests/: test_pipeline.py
