[build-system]
requires = ["setuptools>=46.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-decoder"
version = "0.0.2"
description = "PyTorch neural sequence decoder for speech BCI with posterior-constrained LLM decoding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.25.0",
    "scipy>=1.11.1",
    "scikit-learn>=1.3.2",
    "g2p_en>=2.1.0",
    "edit_distance>=1.0.6",
    "wandb",
    "hydra-core>=1.3.2",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "nltk>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
