# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = neural_decoder
description = PyTorch Conformer speech BCI decoder with CTC beam search and KenLM n-gram LM
version = 0.0.3
author = Chaofei Fan, Frank Willett
author_email = stfan@stanford.edu
license = MIT
license_files = LICENSE.txt
# Add here related links, for example:
project_urls =

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
install_requires =
    torch>=2.0.0
    torchaudio>=2.0.0
    hydra-core>=1.3.2
    numpy>=1.25.0
    scipy>=1.11.1
    scikit-learn>=1.3.2
    g2p_en>=2.1.0
    editdistance>=0.6.0
    wandb
    tqdm>=4.60.0
    flashlight-text>=0.0.7
    kenlm>=0.3.0


[options.packages.find]
where = src
exclude =
    tests
    examples
